test/Execute/SyntaxErrorTest/pipe_missing_rhs_eof.typh
"""stderr
syntax error: $FILE:9:11
  unknown tokens

    9 |  let y = 1 |>
                   ^^
"""

let y = 1 |>
